syntax = "proto3";
package ojo.oracle.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ojo/oracle/v1/oracle.proto";
import "ojo/oracle/v1/elys.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/ojo-network/ojo/x/oracle/types";

option (gogoproto.goproto_getters_all) = false;

// Query defines the gRPC querier service.
service Query {
  // ExchangeRates returns exchange rates of all denoms,
  // or, if specified, returns a single denom
  rpc ExchangeRates(QueryExchangeRates) returns (QueryExchangeRatesResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/denoms/exchange_rates/{denom}";
  }

  // ActiveExchangeRates returns all active denoms
  rpc ActiveExchangeRates(QueryActiveExchangeRates)
      returns (QueryActiveExchangeRatesResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/denoms/active_exchange_rates";
  }

  // FeederDelegation returns feeder delegation of a validator
  rpc FeederDelegation(QueryFeederDelegation)
      returns (QueryFeederDelegationResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/validators/{validator_addr}/feeder";
  }

  // MissCounter returns oracle miss counter of a validator
  rpc MissCounter(QueryMissCounter) returns (QueryMissCounterResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/validators/{validator_addr}/miss";
  }

  // SlashWindow returns slash window information
  rpc SlashWindow(QuerySlashWindow) returns (QuerySlashWindowResponse) {
    option (google.api.http).get = "/ojo/oracle/v1/slash_window";
  }

  // AggregatePrevote returns an aggregate prevote of a validator
  rpc AggregatePrevote(QueryAggregatePrevote)
      returns (QueryAggregatePrevoteResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/validators/{validator_addr}/aggregate_prevote";
  }

  // AggregatePrevotes returns aggregate prevotes of all validators
  rpc AggregatePrevotes(QueryAggregatePrevotes)
      returns (QueryAggregatePrevotesResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/validators/aggregate_prevotes";
  }

  // AggregateVote returns an aggregate vote of a validator
  rpc AggregateVote(QueryAggregateVote) returns (QueryAggregateVoteResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/valdiators/{validator_addr}/aggregate_vote";
  }

  // AggregateVotes returns aggregate votes of all validators
  rpc AggregateVotes(QueryAggregateVotes)
      returns (QueryAggregateVotesResponse) {
    option (google.api.http).get = "/ojo/oracle/v1/validators/aggregate_votes";
  }

  // Params queries all parameters.
  rpc Params(QueryParams) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ojo/oracle/v1/params";
  }

  // Medians returns medians of all denoms,
  // or, if specified, returns a single median
  rpc Medians(QueryMedians) returns (QueryMediansResponse) {
    option (google.api.http).get = "/ojo/historacle/v1/denoms/medians";
  }

  // MedianDeviations returns median deviations of all denoms,
  // or, if specified, returns a single median deviation
  rpc MedianDeviations(QueryMedianDeviations)
      returns (QueryMedianDeviationsResponse) {
    option (google.api.http).get =
        "/ojo/historacle/v1/denoms/median_deviations";
  }

  // ValidatorRewardSet returns the set of validators that is
  // earning rewards for voting on exchange rates based on their
  // misscounter in a given Slash Window
  rpc ValidatorRewardSet(QueryValidatorRewardSet)
      returns (QueryValidatorRewardSetResponse) {
    option (google.api.http).get =
        "/ojo/oracle/v1/valdiators/validator_reward_set";
  }

  rpc LatestPrices(QueryLatestPricesRequest)
      returns (QueryLatestPricesResponse) {
        option (google.api.http).get = "/elys-network/elys/oracle/latest_prices/{denoms}";
  }

  rpc AllLatestPrices(QueryAllLatestPricesRequest)
      returns (QueryAllLatestPricesResponse) {
        option (google.api.http).get = "/elys-network/elys/oracle/all_latest_prices";
  }

  rpc PriceHistory(QueryPriceHistoryRequest)
      returns (QueryPriceHistoryResponse) {
        option (google.api.http).get = "/elys-network/elys/oracle/price_history/{asset}";
  }

  // Queries a Pool.
  rpc Pool(QueryPoolRequest) returns (QueryPoolResponse) {
    option (google.api.http).get = "/elys-network/elys/oracle/pool/{pool_id}";
  }

  // Queries a list of Pool items.
  rpc PoolAll(QueryPoolAllRequest) returns (QueryPoolAllResponse) {
    option (google.api.http).get = "/elys-network/elys/oracle/pool";
  }

  // Queries an AccountedPool.
  rpc AccountedPool(QueryAccountedPoolRequest)
      returns (QueryAccountedPoolResponse) {
    option (google.api.http).get =
        "/elys-network/elys/oracle/accounted_pool/{pool_id}";
  }

  // Queries a list of AccountedPool items.
  rpc AccountedPoolAll(QueryAccountedPoolAllRequest)
      returns (QueryAccountedPoolAllResponse) {
    option (google.api.http).get =
        "/elys-network/elys/oracle/accounted_pool";
  }

  // Queries a AssetInfo by denom.
  rpc AssetInfo(QueryAssetInfoRequest) returns (QueryAssetInfoResponse) {
    option (google.api.http).get =
        "/elys-network/elys/oracle/asset_info/{denom}";
  }

  // Queries a list of AssetInfo items.
  rpc AssetInfoAll(QueryAssetInfoAllRequest)
      returns (QueryAssetInfoAllResponse) {
    option (google.api.http).get = "/elys-network/elys/oracle/asset_info";
  }
}

// QueryExchangeRates is the request type for the Query/ExchangeRate RPC
// method.
message QueryExchangeRates {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // denom defines the denomination to query for.
  string denom = 1;
}

// QueryExchangeRatesResponse is response type for the
// Query/ExchangeRates RPC method.
message QueryExchangeRatesResponse {
  // exchange_rates defines a list of the exchange rate for all whitelisted
  // denoms.
  repeated cosmos.base.v1beta1.DecCoin exchange_rates = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}

// QueryActiveExchangeRates is the request type for the
// Query/ActiveExchangeRates RPC method.
message QueryActiveExchangeRates {}

// QueryActiveExchangeRatesResponse is response type for the
// Query/ActiveExchangeRates RPC method.
message QueryActiveExchangeRatesResponse {
  // activeRates defines a list of the denomination which oracle prices aggreed
  // upon.
  repeated string active_rates = 1;
}

// QueryFeederDelegation is the request type for the
// Query/FeederDelegation RPC method.
message QueryFeederDelegation {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // validator defines the validator address to query for.
  string validator_addr = 1;
}

// QueryFeederDelegationResponse is response type for the
// Query/FeederDelegation RPC method.
message QueryFeederDelegationResponse {
  // feeder_addr defines the feeder delegation of a validator
  string feeder_addr = 1;
}

// QueryMissCounter is the request type for the Query/MissCounter RPC
// method.
message QueryMissCounter {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // validator defines the validator address to query for.
  string validator_addr = 1;
}

// QueryMissCounterResponse is response type for the
// Query/MissCounter RPC method.
message QueryMissCounterResponse {
  // miss_counter defines the oracle miss counter of a validator
  uint64 miss_counter = 1;
}

// QuerySlashWindow is the request type for the
// Query/SlashWindow RPC method.
message QuerySlashWindow {}

// QuerySlashWindowResponse is response type for the
// Query/SlashWindow RPC method.
message QuerySlashWindowResponse {
  // window_progress defines the number of voting periods
  // since the last slashing event would have taken place.
  uint64 window_progress = 1;
}

// QueryAggregatePrevote is the request type for the
// Query/AggregatePrevote RPC method.
message QueryAggregatePrevote {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // validator defines the validator address to query for.
  string validator_addr = 1;
}

// QueryAggregatePrevoteResponse is response type for the
// Query/AggregatePrevote RPC method.
message QueryAggregatePrevoteResponse {
  // aggregate_prevote defines oracle aggregate prevote submitted by a validator
  // in the current vote period
  AggregateExchangeRatePrevote aggregate_prevote = 1
      [ (gogoproto.nullable) = false ];
}

// QueryAggregatePrevotes is the request type for the
// Query/AggregatePrevotes RPC method.
message QueryAggregatePrevotes {}

// QueryAggregatePrevotesResponse is response type for the
// Query/AggregatePrevotes RPC method.
message QueryAggregatePrevotesResponse {
  // aggregate_prevotes defines all oracle aggregate prevotes submitted in the
  // current vote period
  repeated AggregateExchangeRatePrevote aggregate_prevotes = 1
      [ (gogoproto.nullable) = false ];
}

// QueryAggregateVote is the request type for the Query/AggregateVote RPC
// method.
message QueryAggregateVote {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // validator defines the validator address to query for.
  string validator_addr = 1;
}

// QueryAggregateVoteResponse is response type for the
// Query/AggregateVote RPC method.
message QueryAggregateVoteResponse {
  // aggregate_vote defines oracle aggregate vote submitted by a validator in
  // the current vote period
  AggregateExchangeRateVote aggregate_vote = 1 [ (gogoproto.nullable) = false ];
}

// QueryAggregateVotes is the request type for the Query/AggregateVotes
// RPC method.
message QueryAggregateVotes {}

// QueryAggregateVotesResponse is response type for the
// Query/AggregateVotes RPC method.
message QueryAggregateVotesResponse {
  // aggregate_votes defines all oracle aggregate votes submitted in the current
  // vote period
  repeated AggregateExchangeRateVote aggregate_votes = 1
      [ (gogoproto.nullable) = false ];
}

// QueryParams is the request type for the Query/Params RPC method.
message QueryParams {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryMedians is the request type for the Query/Medians RPC Response.
message QueryMedians {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  // denom defines the denomination to query for.
  string denom = 1;
  // numStamps defines the number of median stamps to query for. numStamps
  // must be greater than 0.
  uint32 numStamps = 2;
}

// QueryMediansResponse is response type for the
// Query/Medians RPC method.
message QueryMediansResponse {
  // medians defines a list of the medians for all stamped denoms.
  repeated PriceStamp medians = 1 [(gogoproto.nullable) = false];
}

// QueryMedianDeviations is the request type for the Query/MedianDeviations RPC
// Response.
message QueryMedianDeviations {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  // denom defines the denomination to query for.
  string denom = 1;
}

// QueryMedianDeviationsResponse is response type for the
// Query/MedianDeviations RPC method.
message QueryMedianDeviationsResponse {
  // medians defines a list of the median deviations for all stamped denoms.
  repeated PriceStamp medianDeviations = 1 [(gogoproto.nullable) = false];
}

// QueryValidatorRewardSet is the request type for the Query/ValidatorRewardSet RPC method.
message QueryValidatorRewardSet {}

// QueryValidatorRewardSetResponse is the response type for the Query/ValidatorRewardSet RPC method.
message QueryValidatorRewardSetResponse {
  ValidatorRewardSet validators = 1 [(gogoproto.nullable) = false];
}

// QueryLatestPricesRequest is the request type for the Query/LatestPrices RPC method.
message QueryLatestPricesRequest {
  repeated string denoms = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryLatestPricesResponse is the response type for the Query/LatestPrices RPC method.
message QueryLatestPricesResponse {
  repeated LatestPrice prices = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryAllLatestPricesRequest is the request type for the Query/AllLatestPrices RPC method.
message QueryAllLatestPricesRequest {}

// QueryAllLatestPricesResponse is the response type for the Query/AllLatestPrices RPC method.
message QueryAllLatestPricesResponse {
  repeated LatestPrice prices = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPriceHistoryRequest is the request type for the Query/PriceHistory RPC method.
message QueryPriceHistoryRequest {
  string asset = 1;
}

// QueryPriceHistoryResponse is the response type for the Query/PriceHistory RPC method.
message QueryPriceHistoryResponse {
  repeated Price prices = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPoolRequest is the request type for the Query/PoolRequest RPC method.
message QueryPoolRequest { uint64 pool_id = 1; }

// QueryPoolResponse is the response type for the Query/PoolResponse RPC method.
message QueryPoolResponse {
  Pool pool = 1 [ (gogoproto.nullable) = false ];
}

// QueryPoolAllRequest is the request type for the Query/PoolAllRequest RPC method.
message QueryPoolAllRequest {}

// QueryPoolAllResponse is the response type for the Query/PoolAllResponse RPC method.
message QueryPoolAllResponse {
  repeated Pool pool = 1 [ (gogoproto.nullable) = false ];
}

// QueryAccountedPoolRequest is the request type for the Query/AccountedPoolRequest RPC method.
message QueryAccountedPoolRequest { uint64 pool_id = 1; }

// QueryAccountedPoolResponse is the response type for the Query/AccountedPoolResponse RPC method.
message QueryAccountedPoolResponse {
  AccountedPool accounted_pool = 1 [ (gogoproto.nullable) = false ];
}

// QueryAccountedPoolAllRequest is the request type for the Query/AccountedPoolAllRequest RPC method.
message QueryAccountedPoolAllRequest {}

// QueryAccountedPoolAllResponse is the response type for the Query/AccountedPoolAllResponse RPC method.
message QueryAccountedPoolAllResponse {
  repeated AccountedPool accounted_pool = 1 [ (gogoproto.nullable) = false ];
}

// QueryAssetInfoRequest is the request type for the Query/AssetInfoRequest RPC method.
message QueryAssetInfoRequest { string denom = 1; }

// QueryAssetInfoResponse is the response type for the Query/AssetInfoResponse RPC method.
message QueryAssetInfoResponse {
  AssetInfo asset_info = 1 [ (gogoproto.nullable) = false ];
}

// QueryAssetInfoAllRequest is the request type for the Query/AssetInfoAllRequest RPC method.
message QueryAssetInfoAllRequest {}

// QueryAssetInfoAllResponse is the response type for the Query/AssetInfoAllResponse RPC method.
message QueryAssetInfoAllResponse {
  repeated AssetInfo asset_info = 1 [ (gogoproto.nullable) = false ];
}
